# tinker-engine

./: .choco  .clang-format  .clang-tidy  .cppcheck-suppressions  .gitignore  .setup-bash.sh  .setup-zsh.sh  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  README.md  build.sh  compile.sh  conanfile.txt  default.profraw  vcpkg.json
.docker/: Dockerfile
.github/actions/build-action/linux/: action.yml
.github/actions/build-action/macos/: action.yml
.github/actions/build-action/windows/: action.yml
.github/actions/deploy-action/: action.yml
.github/actions/validate-build-action/: action.yml
.github/dependencies/: .brew  .choco
.github/workflows/: build-and-deploy.yml  build-workflow.yml  build.yml  cleanup-workflows.yml  cmake-multi-platform.yml
core/: CMakeLists.txt  engine_app.cpp  glfw_window.cpp  main.cpp
editor/: CMakeLists.txt  glfw_window.cpp  main.cpp
include/: Sample.h  engine_app.hpp  engine_device.hpp  engine_pipeline.hpp  file_reader.hpp  glfw_window.hpp  uint_to_int_converter.hpp  window.hpp
include/render/: glfw_window.hpp  window.hpp
rendering/: CMakeLists.txt
rendering/include/: window.hpp
scripts/: build.sh  lint.sh  setup.sh  test.sh  update-dependencies.sh  update-sources.sh  validate.sh
shaders/: simple_shader.vert
src/: CMakeLists.txt  engine_app.cpp  engine_device.cpp  engine_pipeline.cpp  file_reader.cpp  main.cpp  window.cpp
src/render/: glfw_window.cpp
test/: CMakeLists.txt  SampleTest.cpp  uint_to_int_converter_test.cpp
